--- a/css/styles.css
+++ b/css/styles.css
@@ -628,6 +628,11 @@ p {
   background-color: transparent;
   outline: transparent;
   padding-left: 16px;
+
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
  
 }
 
@@ -937,6 +942,11 @@ color: #757575;
 }
 
 .modal-input-textarea{
+  
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
   width: 100%;
   height: 120px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -946,7 +956,7 @@ color: #757575;
   resize: none;
   padding-left: 16px;
   padding-top: 12px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 .modal-input-textarea:focus{
   border-color:#2196f3;
